--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>C2G Desenvolvimento - Página inicial</title>
 </head>
 <body>
-    <h1>TESTE</h1>
+    <h1>O Biel é vacilão</h1>
 </body>
 </html>
